tests/cli/snapshots/cli__check__check_help.snap
---
source: tests/cli/check.rs
info:
  program: slcr
  args:
    - check
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Report the invariants requirements files break

Usage: slcr check [OPTIONS] <FILE>...

Arguments:
  <FILE>...
          The requirements files to check: `.yaml`, `.yml`, `.json`, or `.toml`

Options:
      --deny-warnings
          Fail when a file has warnings, too

      --format <FORMAT>
          How to report the findings

          Possible values:
          - human: Diagnostics on stderr, then each file's status on stdout
          - json:  One JSON document on stdout, describing every file and finding
          
          [default: human]

      --enable-colors <ENABLE_COLORS>
          Whether to color the output

          Possible values:
          - always: Always color the output
          - never:  Never color the output
          - auto:   Detect whether the terminal is a tty before deciding to color
          
          [default: auto]

      --log-level <LOG_LEVEL>
          Sets the maximum log level. Defaults to INFO. Options are 'trace', 'debug', 'info', 'warn', 'error', and 'off'. 'off' implies no logger will occur. Options are case-insensitive
          
          [env: LOG_LEVEL=]
          [default: info]

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
