tests/cli/snapshots/cli__check__check_passes_the_canon_example_in_every_format.snap
---
source: tests/cli/check.rs
info:
  program: slcr
  args:
    - check
    - todo-api.yaml
    - todo-api.json
    - todo-api.toml
---
success: true
exit_code: 0
----- stdout -----
todo-api.yaml: ok
todo-api.json: ok
todo-api.toml: ok

----- stderr -----
