tests/cli/snapshots/cli__check__check_rejects_an_unknown_format.snap
---
source: tests/cli/check.rs
info:
  program: slcr
  args:
    - check
    - "--format"
    - xml
    - a.yaml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'xml' for '--format <FORMAT>'
  [possible values: human, json]

For more information, try '--help'.
