tests/cli/snapshots/cli__check__check_requires_a_file.snap
---
source: tests/cli/check.rs
info:
  program: slcr
  args:
    - check
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <FILE>...

Usage: slcr check <FILE>...

For more information, try '--help'.
